--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 <html lang="en">
 <style>
 
-.bar {
+.budgetBar {
   fill: steelblue;
+}
+
+.planningBar {
+  fill: darkgreen;
+}
+
+.consumptionBar {
+  fill: orange;
 }
 
 .bar:hover {
