--- a/index.html
+++ b/index.html
@@ -34,13 +34,16 @@
 }
 
 </style>
+
 <head>
 	<meta charset="utf-8" />
 	<title>D3 Budget</title>
 </head>
+<link rel="stylesheet" type="text/css" href="Budget.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 <script data-main="main" src="require.js"></script>
 <body>
+  <svg class="budgetPlot" width="1000" height="300"  viewBox="0 0 1000 300" preserveAspectRatio="xMinYMin meet"/>
 </body>
 
 </html>
