--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
 </head>
 <link rel="stylesheet" type="text/css" href="Budget.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 <script data-main="main" src="require.js"></script>
 <body>
-  <svg class="budgetPlot" width="1000" height="300"  viewBox="0 0 1000 300" preserveAspectRatio="xMinYMin meet"/>
+  <svg class="budgetPlot" width="950" height="500"  viewBox="0 0 1000 300" preserveAspectRatio="xMinYMin meet"/>
 </body>
 
 </html>
