seperate data draw from setup

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 <script data-main="main" src="require.js"></script>
 <body>
-  <svg class="budgetPlot" width="950" height="500"  viewBox="0 0 1000 300" preserveAspectRatio="xMinYMin meet"/>
+  <h1>Budget</h1>
+  <div id="budgetPlot" width="800" height="450"/>
 </body>
 
 </html>
