--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <style>
 
@@ -44,7 +44,7 @@
 <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 <script data-main="main" src="require.js"></script>
 <body>
-  <h1>Budget</h1>
+  <h1>Budget !</h1>
   <div id="budgetPlot" width="800" height="450"/>
 </body>
 
