--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <link rel="stylesheet" type="text/css" href="Budget.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
-<script data-main="Main" src="require.js"></script>
+<script data-main="main" src="require.js"></script>
 <body>
   
   <div id="budgetPlot" width="800" height="450"/>
