--- a/index.html
+++ b/index.html
@@ -2,22 +2,6 @@
 <html lang="en">
 <style>
 
-.budgetBar {
-  fill: steelblue;
-}
-
-.planningBar {
-  fill: darkgreen;
-}
-
-.consumptionBar {
-  fill: orange;
-}
-
-.bar:hover {
-  fill: brown;
-}
-
 .axis {
   font: 10px sans-serif;
 }
@@ -39,7 +23,7 @@
 	<meta charset="utf-8" />
 	<title>D3 Budget</title>
 </head>
-<link rel="stylesheet" type="text/css" href="Budget.css">
+<link rel="stylesheet" type="text/css" href="Got.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 <script data-main="main" src="require.js"></script>
