--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>D3 Budget</title>
+	<title>Multi Dimensional Graph</title>
 </head>
 <link rel="stylesheet" type="text/css" href="Got.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
