--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>Multi Dimensional Graph</title>
+	<title>Multidimensional Graph</title>
 </head>
 <link rel="stylesheet" type="text/css" href="Got.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
