--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 <script data-main="main" src="require.js"></script>
 <body>
-  <div id="budgetPlot" width="800" height="450"/>
+  <div id="plotArea" width="800" height="450"/>
 </body>
 </html>
